// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateCellSetsClustering action Dispatches all required actions to update cell sets clustering. 1`] = `
Object {
  "type": "cellSets/clusteringUpdating",
}
`;

exports[`updateCellSetsClustering action Dispatches all required actions to update cell sets clustering. 2`] = `
Object {
  "payload": Object {
    "data": Array [
      Object {
        "cellIds": Array [
          "1",
          "2",
          "3",
        ],
        "color": "#ff0000",
        "name": "one",
      },
      Object {
        "key": "scratchpad",
        "name": "Scratchpad",
        "rootNode": true,
      },
    ],
    "experimentId": "1234",
  },
  "type": "cellSets/clusteringUpdated",
}
`;

exports[`updateCellSetsClustering action Dispatches all required actions to update cell sets clustering. 3`] = `
Object {
  "payload": Object {
    "experimentId": "1234",
    "saved": Object {},
  },
  "type": "cellSets/save",
}
`;

exports[`updateCellSetsClustering action Dispatches error action when the reset fails 1`] = `
Object {
  "type": "cellSets/clusteringUpdating",
}
`;

exports[`updateCellSetsClustering action Dispatches error action when the reset fails 2`] = `
Object {
  "payload": Object {
    "error": [TypeError: Cannot read property 'body' of undefined],
    "experimentId": "1234",
  },
  "type": "cellSets/error",
}
`;
